--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title lang="ru">Товары и точка</title>
 </head>
-<body>
+<body class="page">
+  <div class="page__container">
+    <header class="header page__header section">
+    </header>
+    <main class="content page__content">
+      <section class="section content__section">
+      </section>
+    </main>
+    <footer class="footer section page__footer">
+      <p class="footer__copyright">&#169; 2022  ООО «Товары и точка»</p>
+    </footer>
+  </div>
 </body>
 </html>
