feat: absent goods layout added

--- a/src/index.html
+++ b/src/index.html
@@ -76,17 +76,59 @@
             </form>
           </section>
           <section class="absent-goods content__section section">
-            <h2 class="section__subtitle section__subtitle_semibold">Отсутствуют &#183; 3 товара</h2>
-            <button class="dropdown__button"></button>
-            <hr>
-            <ul>
-              <li>
-                <img />
-                <h3>Футболка UZcotton мужская</h3>
-                <span>Цвет: белый</span>
-                <span>Размер: 56</span>
-                <button></button>
-                <button></button>
+            <div class="absent-goods__title-wrapper">
+              <h2 class="section__subtitle section__subtitle_semibold">Отсутствуют &#183; 3 товара</h2>
+              <button class="dropdown__button button"></button>
+            </div>
+            <div class="divider-line divider-line_absent-goods"></div>
+            <ul class="absent-goods__list">
+              <li class="absent-goods__item">
+                <div class="absent-goods__content-wrapper">
+                  <img class="absent-goods__photo" src="<%=require('./images/tshirt_UZcotton.png')%>" alt="Футболка UZcotton мужская" />
+                  <div class="absent-goods__text-wrapper">
+                    <h3 class="section__text">Футболка UZcotton мужская</h3>
+                    <div class="absent-goods__description">
+                      <span class="section__subtext">Цвет: белый</span>
+                      <span class="section__subtext">Размер: 56</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="absent-goods__button-wrapper">
+                  <button class="like-button button"></button>
+                  <button class="delete-button button"></button>
+                </div>
+              </li>
+              <li class="absent-goods__item">
+                <div class="absent-goods__content-wrapper">
+                  <img class="absent-goods__photo" src="<%=require('./images/tshirt_UZcotton.png')%>" alt="Футболка UZcotton мужская" />
+                  <div class="absent-goods__text-wrapper">
+                    <h3 class="section__text">Футболка UZcotton мужская</h3>
+                    <div class="absent-goods__description">
+                      <span class="section__subtext">Цвет: белый</span>
+                      <span class="section__subtext">Размер: 56</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="absent-goods__button-wrapper">
+                  <button class="like-button button"></button>
+                  <button class="delete-button button"></button>
+                </div>
+              </li>
+              <li class="absent-goods__item">
+                <div class="absent-goods__content-wrapper">
+                  <img class="absent-goods__photo" src="<%=require('./images/tshirt_UZcotton.png')%>" alt="Футболка UZcotton мужская" />
+                  <div class="absent-goods__text-wrapper">
+                    <h3 class="section__text">Футболка UZcotton мужская</h3>
+                    <div class="absent-goods__description">
+                      <span class="section__subtext">Цвет: белый</span>
+                      <span class="section__subtext">Размер: 56</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="absent-goods__button-wrapper">
+                  <button class="like-button button"></button>
+                  <button class="delete-button button"></button>
+                </div>
               </li>
             </ul>
           </section>
